<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.finnzhanchen.songgo.Activity_1_Start"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button_start"
        android:layout_width="118dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonStartGame"
        android:text="Start!"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_box" />

    <Button
        android:id="@+id/button_achievement"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:onClick="buttonAchievement"
        android:text="Achievement"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="305dp"
        android:layout_height="93dp"
        android:layout_marginTop="32dp"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logov3" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="174dp"
        android:layout_height="175dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        app:srcCompat="@drawable/ball" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="83dp"
        android:layout_height="99dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563"
        app:srcCompat="@drawable/run" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="163dp"
        android:layout_height="184dp"
        android:layout_marginEnd="120dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996"
        app:srcCompat="@drawable/sport" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="95dp"
        android:layout_height="97dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57"
        app:srcCompat="@drawable/walk_girl" />

    <EditText
        android:id="@+id/name_box"
        android:layout_width="142dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Player Name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

</android.support.constraint.ConstraintLayout>
